update decomp and cluster

--- a/EEG-BCI/graduate/incremental/incremental_SBP.ipynb
+++ b/EEG-BCI/graduate/incremental/incremental_SBP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.linear_model import Perceptron\n",
     "\n",
     "import xgboost\n",
     "import lightgbm\n",
@@ -82,7 +83,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity #余弦相似度\n",
     "\n",
     "#one-hot使用\n",
-    "#from keras.utils import to_categorical\n",
+    "from keras.utils import to_categorical\n",
     "\n",
     "from sklearn.preprocessing import label_binarize\n",
     "\n",
@@ -94,23 +95,6 @@
     "import gc\n",
     "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from keras.utils import to_categorical"
    ]
   },
   {
@@ -408,13 +392,6 @@
     "\n",
     "    return X"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
