--- a/EEG-BCI/graduate/cluster/cluster_ar.ipynb
+++ b/EEG-BCI/graduate/cluster/cluster_ar.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.cluster import DBSCAN\n",
     "\n",
     "import xgboost"
    ]
@@ -730,13 +731,7 @@
     }
    ],
    "source": [
-    "all_centers = []\n",
-    "all_time = []\n",
-    "\n",
     "for freq in [6 , 7.5 , 8.5 , 10]:\n",
-    "    sub_centers = []\n",
-    "    sub_time = []\n",
-    "    \n",
     "    print('freq : ' , freq)\n",
     "    \n",
     "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
@@ -754,14 +749,7 @@
     "        _ = kmeans.fit_transform(X_pca)\n",
     "        time2 = time.clock() - start\n",
     "        \n",
-    "        sub_centers.append(kmeans.cluster_centers_)\n",
-    "        sub_time.append(time1 + time2)\n",
-    "        \n",
-    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)\n",
-    "    \n",
-    "    all_centers.append(sub_centers)\n",
-    "    all_time.append(sub_time)\n",
-    "    \n"
+    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)"
    ]
   },
   {
@@ -776,7 +764,209 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
+    "    print('freq : ' , freq)\n",
+    "    \n",
+    "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
+    "        \n",
+    "        X , y = session_data_labels(session_id , freq , is_training=True)\n",
+    "        X_sbp = feature_extraction_ar(X)\n",
+    "        \n",
+    "        pca = PCA(n_components=2)\n",
+    "        start = time.clock()\n",
+    "        X_pca = pca.fit_transform(X_sbp)\n",
+    "        time1 = time.clock() - start\n",
+    "        \n",
+    "        dbscan = DBSCAN()\n",
+    "        start = time.clock()\n",
+    "        res = dbscan.fit_predict(X_pca)\n",
+    "        time2 = time.clock() - start\n",
+    "        \n",
+    "        _centers = get_center(X_pca , res)\n",
+    "        \n",
+    "        print('session : ' , session_id , _centers , time1 + time2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "freq :  6\n",
+      "session :  1 [[ 9809.30637055  5873.997126  ]\n",
+      " [-3309.90182733  -396.18234087]\n",
+      " [ 5541.31430907 -2332.18747607]\n",
+      " [20737.07835662 -7529.41538644]\n",
+      " [ 3238.93097603  5349.80016133]\n",
+      " [  486.28901659   -60.47010689]\n",
+      " [ 6524.81918274 12817.59079562]\n",
+      " [17927.16905739  3663.26547372]\n",
+      " [11240.12917738 -4617.62376199]] 0.1278658\n",
+      "session :  3 [[-1.68374150e+03  2.79139287e+02]\n",
+      " [ 6.56552019e+04 -1.03255106e+04]\n",
+      " [ 1.36421845e+05  2.19759943e+05]\n",
+      " [ 1.22222721e+05  1.35985147e+04]\n",
+      " [-1.02854305e+04  3.86199803e+01]\n",
+      " [ 3.29287421e+04  3.08175132e+03]\n",
+      " [ 1.82625025e+05 -4.18484888e+04]\n",
+      " [ 1.61514503e+05  6.62199656e+04]\n",
+      " [ 1.04275372e+05 -2.83989441e+04]] 0.1446489999999585\n",
+      "session :  5 [[-9.29221834e+03  1.15737434e+04]\n",
+      " [ 1.80095498e+05  1.07549143e+04]\n",
+      " [ 8.56339469e+04 -5.36079461e+03]\n",
+      " [-9.49745890e+03  2.36227544e+01]\n",
+      " [ 3.00815194e+04 -5.20802596e+03]\n",
+      " [ 1.25990931e+05  4.63150406e+03]\n",
+      " [ 2.11728512e+03 -2.16823413e+04]\n",
+      " [ 2.99590898e+05  6.37945074e+04]\n",
+      " [ 5.66778084e+04 -2.24698385e+04]] 0.14792049999994106\n",
+      "session :  6 [[-2.36442087e+03 -2.37374110e+03]\n",
+      " [ 9.08120922e+03 -1.02660892e+03]\n",
+      " [-9.26466643e+01  5.31241775e+03]\n",
+      " [ 1.25196235e+05 -1.57881677e+04]\n",
+      " [ 4.08388277e+04 -7.33044048e+03]\n",
+      " [ 7.75205473e+03  9.84013641e+03]\n",
+      " [ 1.96165158e+04 -3.28868453e+03]\n",
+      " [-1.42341273e+03  8.71122612e+02]\n",
+      " [ 3.09891016e+03 -2.05887746e+02]] 0.16834469999992052\n",
+      "session :  7 [[ -4212.29023977 -12345.9673389 ]\n",
+      " [-59764.25137797 107735.93758362]\n",
+      " [ 91562.91914517  31550.74931699]\n",
+      " [-45414.61706204  55315.68432599]\n",
+      " [192396.96045804  83752.04076508]\n",
+      " [ 47906.24523343   8837.21649331]\n",
+      " [-29715.95934886  12207.5570663 ]\n",
+      " [135288.04519169  55309.48743401]\n",
+      " [-80066.95559426 171831.20235947]] 0.12505330000010417\n",
+      "session :  8 [[ 8602.39406957 -1477.4353446 ]\n",
+      " [ -819.6987223    170.19663549]\n",
+      " [14624.88788684 -3073.22000487]\n",
+      " [ 3323.59225312   580.40768431]\n",
+      " [  851.64013478  9879.81767881]\n",
+      " [-2205.78845578 -1387.85769849]\n",
+      " [-6665.25634273 -5969.41358729]\n",
+      " [23928.38445876 -5509.12072776]\n",
+      " [  -82.78818037  3369.53560931]] 0.15756280000005063\n",
+      "session :  9 [[ -8926.30809756   1171.51500357]\n",
+      " [161531.92770255   1309.17418982]\n",
+      " [ 62186.00737299    767.82413441]\n",
+      " [212997.30407383   2238.0867408 ]\n",
+      " [-12166.14287374  35208.76543872]\n",
+      " [110818.01870157   1234.20146361]\n",
+      " [ 16060.67411271  -1683.57927802]\n",
+      " [ -7756.35811843  -4165.24820554]\n",
+      " [-11810.99686158  15621.65725157]] 0.12497559999997065\n",
+      "session :  11 [[ -9473.67190258   2275.56020338]\n",
+      " [103500.33574578   -727.23422398]\n",
+      " [ 65752.65839439 -16189.37115297]\n",
+      " [180200.55650361  10101.38951047]\n",
+      " [ -8924.43732208  -4903.31525496]\n",
+      " [ 14775.41153205 -22859.30547483]\n",
+      " [ 36067.96759978  -6689.40626886]\n",
+      " [300237.27070198  62182.9613084 ]\n",
+      " [134923.00588852   5287.24309686]] 0.10729369999990013\n",
+      "session :  12 [[-2172.51504392 -1789.91029871]\n",
+      " [18121.57073248  5086.2981927 ]\n",
+      " [ 8361.49586743  -409.2154999 ]\n",
+      " [-1449.82251382 10075.19910691]\n",
+      " [-1550.75708625   669.30648956]\n",
+      " [24049.8384137  -3136.34613302]\n",
+      " [14315.43598668 -2054.24904237]\n",
+      " [ -299.63967949  4369.85029769]\n",
+      " [ 3056.0930029   -737.09720546]] 0.1820196000001033\n",
+      "session :  13 [[ -696.17773921  3352.87395426]\n",
+      " [-1416.0013566    168.56487414]\n",
+      " [23767.05768739 -2867.55669084]\n",
+      " [14086.37692441 -2239.6512778 ]\n",
+      " [ 2094.54571177 -1452.74325486]\n",
+      " [ 4001.17743137  4996.41428249]\n",
+      " [-2459.73464578 -1859.30217506]\n",
+      " [ 7812.32150382 -1502.0815481 ]\n",
+      " [ -617.50548293  7629.87844744]] 0.14640700000018114\n",
+      "freq :  7.5\n",
+      "session :  1 [[-3655.15951812 11279.40872835]\n",
+      " [-2339.67272681 -1830.4891953 ]\n",
+      " [22585.1689152   1265.91112146]\n",
+      " [61498.58224865   756.81685204]\n",
+      " [10951.91413242  1020.70739051]\n",
+      " [-4110.05601559 20962.57346761]\n",
+      " [  776.54551586  -850.61438491]\n",
+      " [31814.11903075  1547.91755659]\n",
+      " [-3552.28814062  4523.91108889]] 0.12098349999973834\n",
+      "session :  3 [[-2339.3765498  -2449.68646642]\n",
+      " [17828.65962857   900.53554617]\n",
+      " [-6072.4387032  18557.23294891]\n",
+      " [ 1471.07276586  5210.73505025]\n",
+      " [60547.55923257  3787.86910312]\n",
+      " [ 8933.45054226   234.59765771]\n",
+      " [  661.26774452  -992.98434821]\n",
+      " [-4678.88561262  6784.2405947 ]\n",
+      " [29111.29705808  2097.90614181]] 0.14791569999988496\n",
+      "session :  5 [[ 1525.43527103 -1705.930406  ]\n",
+      " [-3651.90696669 14542.39323047]\n",
+      " [-2920.59979825 -2409.98714915]\n",
+      " [58344.68842793 13505.72430879]\n",
+      " [24791.27638544 -3305.86082352]\n",
+      " [-2387.68291295  3979.98321463]\n",
+      " [10783.27309745 -3788.74482282]\n",
+      " [ 4487.78396407  9087.16529962]\n",
+      " [29307.57901516 13285.29078078]] 0.13515830000005735\n",
+      "session :  6 [[-2.53509643e+03  9.27192868e+01]\n",
+      " [ 1.44762506e+05 -1.65176391e+04]\n",
+      " [ 6.59237713e+04 -2.16415021e+04]\n",
+      " [ 1.63558554e+05  1.73077968e+05]\n",
+      " [ 9.49553230e+04  1.94920063e+04]\n",
+      " [ 2.08311048e+04 -7.81321911e+03]\n",
+      " [ 1.41869654e+05  2.04773924e+04]\n",
+      " [ 1.32214292e+05 -6.11920959e+04]\n",
+      " [-7.67490687e+03  5.07720152e+02]] 0.11114179999958651\n",
+      "session :  7 [[ 30951.5231707  -17067.75429843]\n",
+      " [ -4293.79266722   1392.04762462]\n",
+      " [143154.38900861  43559.2495015 ]\n",
+      " [-22659.72939033  73308.86865593]\n",
+      " [ 82602.30060045  15479.52971023]\n",
+      " [ -3587.78056574  -5101.65008334]\n",
+      " [-12211.22614751  34006.11537912]\n",
+      " [ 15205.66312807  -8761.73618011]\n",
+      " [ 51230.35418628   1220.03643349]] 0.10115510000014183\n",
+      "session :  8 [[ -3365.75196874  -4662.54251747]\n",
+      " [ 53967.5388808  -13604.76175816]\n",
+      " [145785.38474568  35613.72451347]\n",
+      " [ -5875.2982134   11910.93602147]\n",
+      " [ 24273.70233857 -22016.64153506]\n",
+      " [ 43799.69569809   4806.76598415]\n",
+      " [ 80693.16390744  11137.46509911]\n",
+      " [ -4505.19542446   1658.31143333]\n",
+      " [ 14806.85915269  -5026.86238447]] 0.17340359999980137\n"
+     ]
+    }
+   ],
+   "source": [
+    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
+    "    print('freq : ' , freq)\n",
+    "    \n",
+    "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
+    "        \n",
+    "        X , y = session_data_labels(session_id , freq , is_training=True)\n",
+    "        X_sbp = feature_extraction_ar(X)\n",
+    "        \n",
+    "        pca = PCA(n_components=2)\n",
+    "        start = time.clock()\n",
+    "        X_pca = pca.fit_transform(X_sbp)\n",
+    "        time1 = time.clock() - start\n",
+    "        \n",
+    "        kmeans = KMeans(n_clusters=9 , tol=0.001)\n",
+    "        start = time.clock()\n",
+    "        _ = kmeans.fit_transform(X_pca)\n",
+    "        time2 = time.clock() - start\n",
+    "        \n",
+    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1170,13 +1360,7 @@
     }
    ],
    "source": [
-    "all_centers = []\n",
-    "all_time = []\n",
-    "\n",
     "for freq in [6 , 7.5 , 8.5 , 10]:\n",
-    "    sub_centers = []\n",
-    "    sub_time = []\n",
-    "    \n",
     "    print('freq : ' , freq)\n",
     "    \n",
     "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
@@ -1196,14 +1380,7 @@
     "        \n",
     "        _centers = get_center(X_pca , res)\n",
     "        \n",
-    "        sub_centers.append(_centers)\n",
-    "        sub_time.append(time1 + time2)\n",
-    "        \n",
-    "        print('session : ' , session_id , _centers , time1 + time2)\n",
-    "    \n",
-    "    all_centers.append(sub_centers)\n",
-    "    all_time.append(sub_time)\n",
-    "    \n"
+    "        print('session : ' , session_id , _centers , time1 + time2)"
    ]
   },
   {
@@ -1605,13 +1782,7 @@
     }
    ],
    "source": [
-    "all_centers = []\n",
-    "all_time = []\n",
-    "\n",
-    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
-    "    sub_centers = []\n",
-    "    sub_time = []\n",
-    "    \n",
+    "for freq in [6 , 7.5 , 8.5 , 10]:    \n",
     "    print('freq : ' , freq)\n",
     "    \n",
     "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
@@ -1629,14 +1800,7 @@
     "        _ = kmeans.fit_transform(X_lda)\n",
     "        time2 = time.clock() - start\n",
     "        \n",
-    "        sub_centers.append(kmeans.cluster_centers_)\n",
-    "        sub_time.append(time1 + time2)\n",
-    "        \n",
-    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)\n",
-    "    \n",
-    "    all_centers.append(sub_centers)\n",
-    "    all_time.append(sub_time)\n",
-    "    \n"
+    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)"
    ]
   },
   {
@@ -1651,7 +1815,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for freq in [6 , 7.5 , 8.5 , 10]:    \n",
+    "    print('freq : ' , freq)\n",
+    "    \n",
+    "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
+    "        \n",
+    "        X , y = session_data_labels(session_id , freq , is_training=True)\n",
+    "        X_sbp = feature_extraction_ar(X)\n",
+    "        \n",
+    "        lda = LinearDiscriminantAnalysis(n_components=2)\n",
+    "        start = time.clock()\n",
+    "        X_lda = lda.fit_transform(X_sbp , y)\n",
+    "        time1 = time.clock() - start\n",
+    "        \n",
+    "        dbscan = DBSCAN()\n",
+    "        start = time.clock()\n",
+    "        res = dbscan.fit_predict(X_pca)\n",
+    "        time2 = time.clock() - start\n",
+    "        \n",
+    "        _centers = get_center(X_pca , res)\n",
+    "        \n",
+    "        print('session : ' , session_id , _centers , time1 + time2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for freq in [6 , 7.5 , 8.5 , 10]:    \n",
+    "    print('freq : ' , freq)\n",
+    "    \n",
+    "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
+    "        \n",
+    "        X , y = session_data_labels(session_id , freq , is_training=True)\n",
+    "        X_sbp = feature_extraction_ar(X)\n",
+    "        \n",
+    "        lda = LinearDiscriminantAnalysis(n_components=2)\n",
+    "        start = time.clock()\n",
+    "        X_lda = lda.fit_transform(X_sbp , y)\n",
+    "        time1 = time.clock() - start\n",
+    "        \n",
+    "        kmeans = KMeans(n_clusters=9 , tol=0.001)\n",
+    "        start = time.clock()\n",
+    "        _ = kmeans.fit_transform(X_lda)\n",
+    "        time2 = time.clock() - start\n",
+    "        \n",
+    "        print('session : ' , session_id , kmeans.cluster_centers_ , time1 + time2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1666,13 +1879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_centers = []\n",
-    "all_time = []\n",
-    "\n",
     "for freq in [6 , 7.5 , 8.5 , 10]:\n",
-    "    sub_centers = []\n",
-    "    sub_time = []\n",
-    "    \n",
     "    print('freq : ' , freq)\n",
     "    \n",
     "    for session_id in [1 , 3 , 5 , 6 , 7 , 8 , 9 , 11 , 12 , 13]:\n",
@@ -1692,14 +1899,7 @@
     "        \n",
     "        _centers = get_center(X_lda , res)\n",
     "        \n",
-    "        sub_centers.append(_centers)\n",
-    "        sub_time.append(time1 + time2)\n",
-    "        \n",
-    "        print('session : ' , session_id , _centers , time1 + time2)\n",
-    "    \n",
-    "    all_centers.append(sub_centers)\n",
-    "    all_time.append(sub_time)\n",
-    "    \n"
+    "        print('session : ' , session_id , _centers , time1 + time2)"
    ]
   },
   {
