add time module

--- a/EEG-BCI/graduate/x_ensemble_stacking_sbp.ipynb
+++ b/EEG-BCI/graduate/x_ensemble_stacking_sbp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "\n",
     "import sklearn\n",
     "import os\n",
+    "import time\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -485,7 +486,7 @@
     "    for t in range(20): #循环20次 取平均值 作为最终结果\n",
     "        classifier = StackingClassifier(estimators=estimators , final_estimator = RandomForestClassifier(n_estimators=20))\n",
     "        X_train, X_test, y_train, y_test = train_test_split(data_feature , labels , test_size = 0.1)\n",
-    "\n",
+    "        \n",
     "        classifier.fit(X_train , y_train)\n",
     "\n",
     "        acc = classifier.score(X_test , y_test)\n",
@@ -493,6 +494,84 @@
     "        print(acc)\n",
     "        \n",
     "    print('freq = ' , freq , 'average_acc = ' , np.average(acc_s) , 'var_acc = ' , np.var(acc_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_s = []\n",
+    "\n",
+    "estimators = [\n",
+    "    ('svm', SVC()),\n",
+    "    ('knn', KNeighborsClassifier()),\n",
+    "    ('bayes' , GaussianNB()),\n",
+    "    ('decision' , DecisionTreeClassifier()),\n",
+    "            ]\n",
+    "\n",
+    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
+    "    print('freq = ' , freq)\n",
+    "    acc_s = []\n",
+    "    \n",
+    "    data , labels = combine(freq) #读取数据\n",
+    "    data_feature = feature_extraction_sub_band_power(data) #特征提取\n",
+    "    \n",
+    "    for t in range(20): #循环20次 取平均值 作为最终结果\n",
+    "        classifier = StackingClassifier(estimators=estimators , final_estimator = RandomForestClassifier(n_estimators=20))\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(data_feature , labels , test_size = 0.1)\n",
+    "        \n",
+    "        classifier.fit(X_train , y_train)\n",
+    "\n",
+    "        acc = classifier.score(X_test , y_test)\n",
+    "        acc_s.append(acc)\n",
+    "        print(acc)\n",
+    "        \n",
+    "    print('freq = ' , freq , 'average_acc = ' , np.average(acc_s) , 'var_acc = ' , np.var(acc_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "freq =  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc_s = []\n",
+    "\n",
+    "estimators = [\n",
+    "    ('svm', SVC()),\n",
+    "    ('knn', KNeighborsClassifier()),\n",
+    "    ('bayes' , GaussianNB()),\n",
+    "    ('decision' , DecisionTreeClassifier()),\n",
+    "            ]\n",
+    "\n",
+    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
+    "    print('freq = ' , freq)\n",
+    "    \n",
+    "    data , labels = combine(freq) #读取数据\n",
+    "    data_feature = feature_extraction_sub_band_power(data) #特征提取\n",
+    "    \n",
+    "    \n",
+    "    classifier = StackingClassifier(estimators=estimators , final_estimator = RandomForestClassifier(n_estimators=20))\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(data_feature , labels , test_size = 0.1)\n",
+    "\n",
+    "    start = time.clock()\n",
+    "    \n",
+    "    classifier.fit(X_train , y_train)\n",
+    "    acc = classifier.score(X_test , y_test)\n",
+    "    \n",
+    "    all_time = time.clock() - start\n",
+    "    \n",
+    "    print(all_time)"
    ]
   },
   {
