--- a/EEG-BCI/graduate/x_ensemble_stacking_ar.ipynb
+++ b/EEG-BCI/graduate/x_ensemble_stacking_ar.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "import seaborn as sns #绘制confusion matrix heatmap\n",
     "import os\n",
-    "\n",
+    "import time\n",
     "from statsmodels.tsa.ar_model import AR\n",
     "\n",
     "import warnings\n",
@@ -269,6 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def ar(data):\n",
     "    X = []\n",
     "    \n",
@@ -424,6 +425,47 @@
     "        print(acc)\n",
     "        \n",
     "    print('freq = ' , freq , 'average_acc = ' , np.average(acc_s) , 'var_acc = ' , np.var(acc_s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "freq =  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc_s = []\n",
+    "estimators = [\n",
+    "    ('svm', SVC()),\n",
+    "    ('knn', KNeighborsClassifier()),\n",
+    "    ('bayes' , GaussianNB()),\n",
+    "    ('decision' , DecisionTreeClassifier()),\n",
+    "            ]\n",
+    "for freq in [6 , 7.5 , 8.5 , 10]:\n",
+    "    print('freq = ' , freq)\n",
+    "    \n",
+    "    data , labels = combine(freq) #读取数据\n",
+    "    data_feature = feature_extraction_ar(data) #特征提取\n",
+    "        \n",
+    "    classifier = StackingClassifier(estimators=estimators , final_estimator = RandomForestClassifier(n_estimators=20))\n",
+    "\n",
+    "    train_X , val_X , train_y , val_y = train_test_split(data_feature , labels , test_size = 0.1)\n",
+    "\n",
+    "    start = time.clock()\n",
+    "    \n",
+    "    classifier.fit(train_X , train_y)\n",
+    "    acc = classifier.score(val_X , val_y)\n",
+    "\n",
+    "    all_time = time.clock() - start\n",
+    "    \n",
+    "    print(all_time)"
    ]
   },
   {
