--- a/EEG-BCI/graduate/x_ensemble_stacking_ar.ipynb
+++ b/EEG-BCI/graduate/x_ensemble_stacking_ar.ipynb
@@ -429,14 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "freq =  6\n"
+      "freq =  6\n",
+      "222.0624166\n",
+      "freq =  7.5\n",
+      "181.01129689999993\n",
+      "freq =  8.5\n",
+      "157.71786740000016\n",
+      "freq =  10\n",
+      "171.72320000000013\n"
      ]
     }
    ],
