--- a/EEG-BCI/graduate/x_ensemble_stacking_sbp.ipynb
+++ b/EEG-BCI/graduate/x_ensemble_stacking_sbp.ipynb
@@ -533,14 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "freq =  6\n"
+      "freq =  6\n",
+      "61.215997\n",
+      "freq =  7.5\n",
+      "63.88721620000001\n",
+      "freq =  8.5\n",
+      "65.54411460000006\n",
+      "freq =  10\n",
+      "76.75858990000006\n"
      ]
     }
    ],
